# kuka_experimental

./: ddeploy.yaml
kuka_experimental/: package.xml
kuka_kl4000_support/: CMakeLists.txt  package.xml
kuka_kl4000_support/config/: joint_names_kl4000standard.yaml
kuka_kl4000_support/launch/: load_kl4000standard.launch  test_kl4000standard.launch
kuka_kl4000_support/meshes/kl4000standard/collision/: base_link.stl  link_1.stl
kuka_kl4000_support/meshes/kl4000standard/visual/: base_link.dae  base_link_aernnova.dae  link_1.dae
kuka_kl4000_support/test/: roslaunch_test.xml
kuka_kl4000_support/urdf/: kl4000standard.xacro  kl4000standard_macro.xacro
kuka_kr120_support/urdf/: kr120r2500pro.xacro
kuka_kr180_support/meshes/kr180r3500_ultra_k/: script.mlx
kuka_kr180_support/meshes/kr180r3500_ultra_k/collision/: base_link.stl  link_1.stl  link_2.stl  link_3.stl  link_3_aernnova.stl  link_4.stl  link_5.stl  link_6.stl  link_6_aernnova.stl
kuka_kr180_support/urdf/: kr180r3500_ultra_k_macro.xacro
kuka_kr300_support/urdf/: kr300r2700_2_macro.xacro
kuka_rsi_hw_interface/: CMakeLists.txt  package.xml
kuka_rsi_hw_interface/include/kuka_rsi_hw_interface/: kuka_hardware_interface.h  rsi_command.h  rsi_state.h
kuka_rsi_hw_interface/krl/KR_C4/: README.md  README_old.md  ros_rsi.src  ros_rsi_ethernet.xml
kuka_rsi_hw_interface/src/: kuka_hardware_interface.cpp
kuka_rsi_hw_interface/test/: test_hardware_interface.launch  test_params.yaml
kuka_rsi_simulator/: CMakeLists.txt
kuka_rsi_simulator/scripts/: kuka_rsi_simulator
(+3 files in other folders)
